boot001dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot001dep
spec:
  selector:
    matchLabels:
      app: boot001kube
  replicas: 3
  template:
    metadata:
      labels:
        app: boot001kube
    spec:
      containers:
        - name: boot-container
          image: ms6823/k8s_boot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
