boot002ser.yml
apiVersion: v1
kind: Service
metadata:
  name: boot002ser
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8080
  selector:
    app: boot002kube
